--- a/style.css
+++ b/style.css
@@ -37,3 +37,13 @@ body main {
   flex-direction: column;
   align-items: center;
 }
+
+#numdiv {
+  width: 15px;
+  height: 350px;
+  position: absolute;
+  left: 10px;
+  top: 85px;
+  z-index: 10;
+  background-color: antiquewhite;
+}
