--- a/style.css
+++ b/style.css
@@ -19,10 +19,13 @@ body aside {
 }
 
 textarea {
-  width: 500px;
-  height: 350px;
+  width: 900px;
+  height: 1050px;
   resize: none;
   padding: 20px;
+  outline: none;
+  line-height: 1.4em;
+  font-size: 1rem;
 }
 
 button {
@@ -40,10 +43,24 @@ body main {
 
 #numdiv {
   width: 15px;
-  height: 350px;
+  height: 100%;
+
   position: absolute;
-  left: 10px;
-  top: 85px;
+  left: -30px;
+  top: 0;
   z-index: 10;
-  background-color: antiquewhite;
+
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#numdiv label {
+  font-size: 1rem;
+  line-height: 1.4em;
+}
+
+#wrapp {
+  position: relative;
 }
