--- a/style.css
+++ b/style.css
@@ -11,34 +11,69 @@ body {
 
 body aside {
   width: 50%;
-  border: solid 2px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  background-image: linear-gradient(to right, #8b2ee1, #8b2ee1, #f5ebff);
+  padding: 14px;
 }
 
 textarea {
-  width: 900px;
-  height: 1050px;
+  height: calc(100% - 100px);
+  width: 100%;
+  border: none;
   resize: none;
-  padding: 20px;
+  background-color: #1f2430;
   outline: none;
-  line-height: 1.4em;
-  font-size: 1rem;
+  font-family: "Space Grotesk", sans-serif;
+  color: #f5ebff;
+  padding: 10px 35px;
+  z-index: 2;
+}
+
+aside div {
+  background-color: #1f2430;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 2;
+}
+
+#title-wrapp {
+  padding: 20px 0px;
+  border-radius: 20px 20px 0 0;
+}
+
+#under-line {
+  background-color: #8b2ee1;
+  width: 75%;
+  height: 0.5px;
+}
+
+#main-title {
+  color: #fff;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+#btn-wrapp {
+  border-radius: 0 0 20px 20px;
 }
 
 button {
-  padding: 15px 10px;
+  padding: 7px 25px;
   margin-top: 20px;
-}
-
-body main {
-  width: 50%;
-  border: solid 2px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #8b2ee1;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-family: "Space Grotesk", sans-serif;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
 #numdiv {
@@ -64,3 +99,31 @@ body main {
 #wrapp {
   position: relative;
 }
+#img-wrap {
+  position: absolute;
+  z-index: 1;
+  left: 32%;
+  top: 5%;
+  width: 363px;
+  height: 90%;
+}
+
+#main-img {
+  height: 100%;
+  width: 100%;
+}
+
+main {
+  background-color: #f5ebff;
+  width: 50%;
+}
+
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 300 to 700
+
+.space-grotesk-<uniquifier> {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
