--- a/style.css
+++ b/style.css
@@ -62,10 +62,17 @@ aside div {
 
 #btn-wrapp {
   border-radius: 0 0 20px 20px;
+  display: grid;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-button {
+#myBtn {
   padding: 7px 25px;
+
   margin-top: 20px;
   background-color: #8b2ee1;
   border: none;
@@ -74,6 +81,11 @@ button {
   font-family: "Space Grotesk", sans-serif;
   margin-bottom: 10px;
   cursor: pointer;
+  transition-duration: 0.3s;
+}
+
+#myBtn:hover {
+  background-color: #9548dd;
 }
 
 #numdiv {
@@ -91,6 +103,32 @@ button {
   align-items: center;
 }
 
+#help-btn {
+  margin-right: 1px;
+  cursor: pointer;
+  padding: 2px 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 5px;
+  transition-duration: 0.3s;
+}
+
+#help-btn:hover {
+  background-color: rgba(225, 225, 225, 0.1);
+}
+
+#help-icon {
+  color: #fff;
+  height: 25px;
+  width: 25px;
+}
+
 #numdiv label {
   font-size: 1rem;
   line-height: 1.4em;
@@ -102,7 +140,7 @@ button {
 #img-wrap {
   position: absolute;
   z-index: 1;
-  left: 32%;
+  left: -38%;
   top: 5%;
   width: 363px;
   height: 90%;
@@ -116,6 +154,62 @@ button {
 main {
   background-color: #f5ebff;
   width: 50%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#popUp {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-color: #1f2430;
+  z-index: 1000;
+  justify-content: center;
+  padding: 30px 40px;
+}
+
+.hidden {
+  display: none;
+  top: 0;
+  left: 0;
+}
+
+.show {
+  display: flex;
+}
+
+#info-title {
+  text-align: center;
+  color: #fff;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 300;
+}
+
+#close-btn {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  padding: 5px 5px;
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#close-btn:hover {
+  background-color: rgba(225, 225, 225, 0.1);
+}
+
+#closeBtn {
+  color: #fff;
+  height: 25px;
+  width: 25px;
 }
 
 /* // <uniquifier>: Use a unique and descriptive class name
